source-sass/app.scss
/* ... */
.cascadia-hands {
  min-height: 0;
  text-align: center;
  padding: 2rem 0 !important;
  margin: 0;
  background: $dark-blue;

  h4 {
    margin: 0;
    color: #fff;
  }

  .button {
    margin: 0 0 0 1rem;
    background: $juicy-blue;
  }

  &:after {
    display: none;
  }
}


.cascadia-journey {
  position: relative;
  width: 100%;
  min-width: 100%;
  // min-height: 5000px;
  // background: url(/media/map/journey-map-test.jpg) center top no-repeat;
  // background-size: 100%;

  &:after {
    display: none;
  }
}

  .cascadia-journey__background {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    width: 100%;
    z-index: 0;
  }

  .helicopter {
    background-attachment: static;
    position: absolute;
    top: 100px;
    right: 100px;
    z-index: 999;
    width: 150px;
  }

  .cascadia-journey__content {
    position: absolute;
    top: 300px;
    left: 0;
    right: 0;
    bottom: 0;

    .row {
      margin: 15rem 0;
    }
  }

  .cascadia-journey__timer {
    position: absolute;
    top: 15vh;
    right: 100px;
  }



// .video-container {
//   position: relative;
//   z-index: 10;
//   max-width: 100%;
//   padding-bottom: 56.25%;
//   padding-top: 30px;
//   height: 0;
//   overflow: hidden;
// }

// .video-container iframe,
// .video-container object,
// .video-container embed {
//     position: absolute;
//     top: 0;
//     left: 0;
//     width: 100%;
//     height: 100%;
// }

